--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enlabs Landing</title>
+    <style>
+      body {
+        background: url("./assets/images/bg-2.jpg") top left no-repeat;
+        background-color: #5bbb00;
+      }
+    </style>
   </head>
   <body>
     <!-- CALL TO ACTION -->
