Configured webpack for different PostCSS plugins

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     </style>
   </head>
   <body>
+
     <!-- CALL TO ACTION -->
     <div>
       <h2>Daily no-limit bonus on 40 super hot!</h2>
@@ -58,5 +59,6 @@
         <span>8000 points</span>
       </div>
     </div>
+    <script src = "bundled.js"></script>
   </body>
 </html>
