Configured webpack dev server to inject css and js without reload

--- a/app/index.html
+++ b/app/index.html
@@ -4,17 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enlabs Landing</title>
-    <style>
-      body {
-        background: url("./assets/images/bg-2.jpg") top left no-repeat;
-        background-color: #5bbb00;
-      }
-    </style>
   </head>
   <body>
 
     <!-- CALL TO ACTION -->
-    <div>
+    <div class="call-to-action">
       <h2>Daily no-limit bonus on 40 super hot!</h2>
       <p>
         This is a special offer available for selected players only. Play 40
