Initial styling of CALL TO ACTION AREA

--- a/app/index.html
+++ b/app/index.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <title>Enlabs Landing</title>
   </head>
   <body>
 
     <!-- CALL TO ACTION -->
     <div class="call-to-action">
-      <h2>Daily no-limit bonus on 40 super hot!</h2>
-      <p>
+      
+      <h2 class="call-to-action__headline"><span class="call-to-action--bg-red">Daily no-limit bonus on 40 super hot!</span></h2>
+      <p class="call-to-action__description">
         This is a special offer available for selected players only. Play 40
         Super Hot today with boosted 2.2% cashback bonus! Come back tomorrow to
         find bonus money in your account and play again. There is no limit on
         bonus cash you can receive.
       </p>
-      <a href="#">Play now</a>
+      <a href="#" class="call-to-action__btn">Play now</a>
     </div>
 
     <!-- STEPS -->
