--- a/app/index.html
+++ b/app/index.html
@@ -8,51 +8,59 @@
   </head>
   <body>
 
-    <!-- CALL TO ACTION -->
-    <div class="call-to-action">
-      
-      <h2 class="call-to-action__headline"><span class="call-to-action--bg-red">Daily no-limit bonus on 40 super hot!</span></h2>
-      <p class="call-to-action__description">
-        This is a special offer available for selected players only. Play 40
-        Super Hot today with boosted 2.2% cashback bonus! Come back tomorrow to
-        find bonus money in your account and play again. There is no limit on
-        bonus cash you can receive.
-      </p>
-      <a href="#" class="call-to-action__btn">Play now</a>
-    </div>
-
-    <!-- STEPS -->
-    <div>
-      <div>
-        <div>1</div>
-        <h3>Play qualifying games</h3>
-        <p>You need at least 2,000 points to qualify</p>
-      </div>
-
-      <div>
-        <div>2</div>
-        <h3>Play qualifying games</h3>
-        <p>You need at least 2,000 points to qualify</p>
-      </div>
-
-      <div>
-        <div>3</div>
-        <h3>Play qualifying games</h3>
-        <p>You need at least 2,000 points to qualify</p>
+    <div class="wrapper">
+      <div class="row">
+        <!-- CALL TO ACTION -->
+        <div class="call-to-action row__6">
+          
+          <h2 class="call-to-action__headline"><span class="call-to-action__headline--bg-red">Daily no-limit bonus on 40 super hot!</span></h2>
+          <p class="call-to-action__description">
+            This is a special offer available for selected players only. Play 40
+            Super Hot today with boosted 2.2% cashback bonus! Come back tomorrow to
+            find bonus money in your account and play again. There is no limit on
+            bonus cash you can receive.
+          </p>
+          <a href="#" class="call-to-action__btn">Play now</a>
+        </div>
       </div>
     </div>
 
-    <!-- LEVEL -->
-    <div>
-      <h3>Check your current level</h3>
-      <div>
-        Level 4
+    <div class="wrapper section">
+      <!-- STEPS -->
+      <div class="row">
+        <div class="step">
+          <div class="step__count">1</div>
+          <h3 class="step__headline">Play qualifying games</h3>
+          <p class="step__description">You need at least 2,000 points to qualify</p>
+        </div>
+
+        <div class="step">
+          <div class="step__count">2</div>
+          <h3 class="step__headline">Play qualifying games</h3>
+          <p class="step__description">You need at least 2,000 points to qualify</p>
+        </div>
+
+        <div class="step">
+          <div class="step__count">3</div>
+          <h3 class="step__headline">Play qualifying games</h3>
+          <p class="step__description">You need at least 2,000 points to qualify</p>
+        </div>
       </div>
+    </div>
+
+    <div class="wrapper">
+      <!-- LEVEL -->
       <div>
-        <p>Your progress <em>39% to complete</em> <em>2345 points to go</em></p>
-        <progress id="file" value="32" max="100"> 32% </progress>
-        <span>2000 points</span>
-        <span>8000 points</span>
+        <h3>Check your current level</h3>
+        <div>
+          Level 4
+        </div>
+        <div>
+          <p>Your progress <em>39% to complete</em> <em>2345 points to go</em></p>
+          <progress id="file" value="32" max="100"> 32% </progress>
+          <span>2000 points</span>
+          <span>8000 points</span>
+        </div>
       </div>
     </div>
     <script src = "bundled.js"></script>
