Added some initial styling for Level section

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 
     <div class="wrapper section">
       <!-- STEPS -->
-      <div class="row">
+      <div class="row row--gutters">
         <div class="step">
           <div class="step__count">1</div>
           <h3 class="step__headline">Play qualifying games</h3>
@@ -50,19 +50,24 @@
 
     <div class="wrapper">
       <!-- LEVEL -->
-      <div>
-        <h3>Check your current level</h3>
-        <div>
-          Level 4
-        </div>
-        <div>
-          <p>Your progress <em>39% to complete</em> <em>2345 points to go</em></p>
-          <progress id="file" value="32" max="100"> 32% </progress>
-          <span>2000 points</span>
-          <span>8000 points</span>
+      <div class="level">
+        <h3 class="level__headline">Check your current level</h3>
+        <div class="row">
+          <div class="level__indicator row__3">
+            Level <span class="level__digit">4</span>
+          </div>
+          <div class="level__progress row__9">
+            <p>Your progress <em>39% to complete</em> <em>2345 points to go</em></p>
+            <progress id="file" value="32" max="100"> 32% </progress>
+            <span>2000 points</span>
+            <span>8000 points</span>
+          </div>
         </div>
       </div>
     </div>
+
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas explicabo unde quae iste ducimus autem obcaecati quo voluptas provident necessitatibus laboriosam, minus vero asperiores iusto laborum esse omnis voluptate nesciunt? Impedit facere, in maxime debitis neque porro sed delectus ea recusandae ipsa repellat quaerat nesciunt. Quibusdam facilis obcaecati consequuntur maxime dolore sapiente deleniti, vero esse exercitationem animi commodi! Amet nemo sapiente maxime soluta, placeat nihil nobis quidem eos doloremque esse autem unde voluptatibus dolore cumque reprehenderit. Temporibus hic quibusdam commodi magni magnam numquam, possimus facere dolores assumenda voluptatum ut ea, totam dignissimos modi omnis exercitationem iure beatae iusto enim sint vitae quo. Totam pariatur ipsam tempore accusamus quam, nisi earum beatae voluptatibus minus exercitationem eveniet reprehenderit asperiores deserunt accusantium, saepe eaque nihil, repudiandae repellendus distinctio esse? Iste consectetur laborum exercitationem optio qui, nihil nisi quos deserunt cum corporis! Dicta, odit, repellendus error laudantium enim veritatis et eum veniam mollitia voluptas non, voluptate exercitationem! Enim, ipsum, perferendis nam molestiae accusamus obcaecati alias corrupti autem quia, quae cupiditate recusandae non natus officia. Odio illum doloremque adipisci unde iusto optio, ipsum quibusdam quae incidunt repellendus repellat qui, ut consectetur, eaque magni totam modi possimus sunt eius. Modi vero harum labore ratione enim?</p>
     <script src = "bundled.js"></script>
   </body>
 </html>
