Made some use of existing BEM classes for layout

--- a/app/index.html
+++ b/app/index.html
@@ -58,14 +58,14 @@
           </div>
           <div class="level__progress row__9">
             <p class="level__progress__text">Your progress</p> 
-            <div class="level__progress__description">
-              <strong class="level__progress__description__current">39% to complete</strong> 
-              <strong class="level__progress__description__current typography--right">2345 points to go</strong>
+            <div class="level__progress__description row row--gutters">
+              <strong class="level__progress__description__current row__6">39% to complete</strong> 
+              <strong class="level__progress__description__current row__6 typography--right">2345 points to go</strong>
             </div>
-            <progress class="progress-bar" value="32" max="100"> 32% </progress>
-            <div class="level__progress__bounds">
-              <span class="level__progress__min-max">2000 points</span>
-              <span class="level__progress__min-max typography--right">8000 points</span>
+            <progress class="progress-bar" value="32" max="100"></progress>
+            <div class="level__progress__bounds row row--gutters">
+              <span class="level__progress__min-max row__6">2000 points</span>
+              <span class="level__progress__min-max row__6 typography--right">8000 points</span>
             </div>
           </div>
         </div>
