Made some changes for mobile first design

--- a/app/index.html
+++ b/app/index.html
@@ -28,22 +28,26 @@
     <div class="wrapper section">
       <!-- STEPS -->
       <div class="row row--gutters">
-        <div class="step">
-          <div class="step__count">1</div>
-          <h3 class="step__headline">Play qualifying games</h3>
-          <p class="step__description">You need at least 2,000 points to qualify</p>
+        <div class="row__large__4">
+          <div class="step">
+            <div class="step__count">1</div>
+            <h3 class="step__headline">Play qualifying games</h3>
+            <p class="step__description">You need at least 2,000 points to qualify</p>
+          </div>
         </div>
-
-        <div class="step">
-          <div class="step__count">2</div>
-          <h3 class="step__headline">Play qualifying games</h3>
-          <p class="step__description">You need at least 2,000 points to qualify</p>
+        <div class="row__large__4">
+          <div class="step">
+            <div class="step__count">2</div>
+            <h3 class="step__headline">Play qualifying games</h3>
+            <p class="step__description">You need at least 2,000 points to qualify</p>
+          </div>
         </div>
-
-        <div class="step">
-          <div class="step__count">3</div>
-          <h3 class="step__headline">Play qualifying games</h3>
-          <p class="step__description">You need at least 2,000 points to qualify</p>
+        <div class="row__large__4">
+          <div class="step">
+            <div class="step__count">3</div>
+            <h3 class="step__headline">Play qualifying games</h3>
+            <p class="step__description">You need at least 2,000 points to qualify</p>
+          </div>
         </div>
       </div>
     </div>
